[gd_scene load_steps=13 format=2]

[ext_resource path="res://skyship.tscn" type="PackedScene" id=1]
[ext_resource path="res://background.tscn" type="PackedScene" id=2]
[ext_resource path="res://background.gd" type="Script" id=3]
[ext_resource path="res://wind.tscn" type="PackedScene" id=4]
[ext_resource path="res://root.gd" type="Script" id=5]
[ext_resource path="res://img/final.png" type="Texture" id=6]
[ext_resource path="res://img/lighttex.png" type="Texture" id=7]
[ext_resource path="res://oldfilm.ogg" type="AudioStream" id=8]
[ext_resource path="res://wind.ogg" type="AudioStream" id=9]
[ext_resource path="res://musica.ogg" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10446.8, 40.6292 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 667.27, 1165.72 )

[node name="root" type="Node2D"]
script = ExtResource( 5 )

[node name="background" parent="." instance=ExtResource( 2 )]
position = Vector2( 4608, 0 )

[node name="position-leveller" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="skyship" parent="position-leveller" instance=ExtResource( 1 )]
position = Vector2( 514.729, 303.876 )
scale = Vector2( 0.4, 0.4 )

[node name="wind" parent="." instance=ExtResource( 4 )]

[node name="bombtimer" type="Timer" parent="."]
autostart = true

[node name="missiletimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="bordi" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordi"]
position = Vector2( 513.576, -67.9733 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="bordi"]
position = Vector2( 4473.85, 609.07 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="bordi"]
position = Vector2( -27.1791, 312.422 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="bordi"]
position = Vector2( 10240.7, 179.094 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="finish" type="Area2D" parent="."]
position = Vector2( 514.729, 303.876 )
scale = Vector2( 0.4, 0.4 )

[node name="Sprite" type="Sprite" parent="finish"]
position = Vector2( 23812.1, -8.20312 )
scale = Vector2( 8.23606, 7.12972 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="finish"]
position = Vector2( 23554.1, 218.701 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="finish"]
position = Vector2( 24079.9, -345.707 )
scale = Vector2( 8.23606, 7.12972 )
editor_only = true
texture = ExtResource( 7 )
color = Color( 0.788235, 0, 0, 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
autoplay = true
max_distance = 2e+07

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
autoplay = true
max_distance = 2e+10

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true
max_distance = 2e+06
[connection signal="timeout" from="bombtimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="bombtimer" to="." method="_on_bombtimer_timeout"]
[connection signal="timeout" from="missiletimer" to="." method="_on_missiletimer_timeout"]
[connection signal="area_entered" from="finish" to="." method="_on_finish_area_entered"]
